testsuite/tests/safeHaskell/safeInfered/UnsafeInfered06.stderr
UnsafeInfered06.hs:4:1: error:
    UnsafeInfered06_A: Can't be safely imported!
    The module itself isn't safe.
