testsuite/tests/safeHaskell/safeInfered/UnsafeInfered06.hs
{-# LANGUAGE Safe #-}
module UnsafeInfered06 where

import safe UnsafeInfered06_A

